
///////////////////////////////////////////////////////////
// NOTE // NOTE // NOTE // NOTE // NOTE // NOTE // NOTE  //
//                                                       //
//       THIS FILE IS AUTOGENERATED BY sqlite3gen        //
// DO NOT EDIT THIS FILE, EDIT THE SOURCE AND REGENERATE //
//                                                       //
// NOTE // NOTE // NOTE // NOTE // NOTE // NOTE // NOTE  //
///////////////////////////////////////////////////////////

syntax = "proto2";

package library;


import "sample2.proto";
// proto top line 2



message TABLE_user_m
{
  optional int64 userid = 1;
  optional string firstname = 2;
  optional string lastname = 3;
  optional string mi = 4;
  optional int32 SSN = 5;
  optional double balance = 6;
  optional bytes proto = 7;
  optional bool test2 = 8;
  optional sample.library2.EnumField_t test3 = 9;

}


// proto bottom line 1
// proto bottom line 2
